<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_authorization"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DKAuthorizationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/titleLabel"/>

    <EditText
        android:id="@+id/auth_entry"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/titleLabel"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/entry_bg"
        android:ems="10"
        android:hint="@string/authorization_code"
        android:inputType="text"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"/>

    <EditText
        android:id="@+id/dns_entry"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/auth_entry"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/entry_bg"
        android:ems="10"
        android:hint="@string/dns"
        android:inputType="text"
        android:paddingEnd="10dp"
        android:paddingStart="10dp" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_below="@+id/dns_entry"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/version_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/version_text"
        android:layout_alignParentBottom="true"
        android:textAlignment="center" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/auth_entry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:visibility="visible" />
</RelativeLayout>
