<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DKMainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headerContainer"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/titleLabel"
            android:layout_alignParentTop="true"
            android:textColor="#FFF"/>

        <ProgressBar
            android:id="@+id/scan_spinner"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:indeterminate="true"
            android:padding="5dp"
            android:layout_below="@+id/titleLabel"/>

        <TextView
            android:id="@+id/operation_txt"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/scan_spinner"
            android:layout_below="@+id/titleLabel"
            android:text="@string/scanning"
            android:layout_toStartOf="@+id/settings_button"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:cropToPadding="true"
            android:padding="8dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/gear" />

    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_view" />

</LinearLayout>